mpm_web_api/bin/Release/netcoreapp3.1/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metalwork-api
  namespace: metalwork
  labels:
    app: metalwork-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metalwork-api
  template:
    metadata:
      labels:
        app: metalwork-api
    spec:   
      containers:
      - name: metalwork-api
        image: a18352764349/metalwork-api:1.0.1
        resources:
          limits:
            memory: "200Mi"
            cpu: "100m"
            ephemeral-storage: "512Mi"
          requests:
            memory: "100Mi"
            cpu: "100m"
        ports:
        - containerPort: 80
          name: "metalwork-api"
