mpm_web_api/bin/Release/netcoreapp3.1/k8s/cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: metalwork-api
  namespace: metalwork
spec:
  type: ClusterIP
  selector:
    component: metalwork-api
    namespace: metalwork
  ports:
    - port: 80
      targetPort: 80
