mpm_web_api/bin/Release/netcoreapp3.1/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: metalwork-api
  namespace: metalwork
spec:
  rules:
    - host: metalwork-api.metalwork.eks005.en.internal
      http:
        paths:
          - path: /
            backend:
              serviceName: metalwork-api
              servicePort: 80
